First Commit, crypto currency api tracker

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "io.ionic.starter2",
   "appName": "crypto-tracker",
   "bundledWebRuntime": false,
   "npmClient": "npm",
