--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-vis": "^1.11.5",
     "axios": "^0.21.0",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
@@ -23,6 +24,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-vis": "^1.11.7",
     "typescript": "3.8.3"
   },
   "scripts": {
