--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-vis": "^1.11.5",
+    "@types/recharts": "^1.8.16",
     "axios": "^0.21.0",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
@@ -24,7 +25,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-vis": "^1.11.7",
+    "recharts": "^1.8.5",
     "typescript": "3.8.3"
   },
   "scripts": {
